fix: changed spacing, styling and linking

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -51,6 +51,7 @@
   border-top-right-radius: 24px;
   align-self: flex-end;
   height: 54px;
+  width: 50px;
 }
 
 .nav-link:hover {
